[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project]
name = "subblog"
version = "0.1.0"
description = "Naver 블로그 크롤링 기반 한의원 서브블로그 자동 생성 시스템"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "feedparser>=6.0.12",
    "firebase-admin>=7.1.0",
    "google-generativeai>=0.8.5",
    "lxml>=6.0.2",
    "numpy>=2.3.5",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "pelican>=4.9.0",
    "markdown>=3.10.2",
    "pelican-sitemap>=1.2.2",
]
